deployments/app-d-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-d
  name: app-d
  namespace: faceit
spec:
  ports:
    - name: http-app
      protocol: TCP
      port: 8080
      targetPort: http-app
    - name: grpc-app
      protocol: TCP
      port: 9090
      targetPort: grpc-app
  selector:
    app: app-d
status:
  loadBalancer: {}
